# WinAPI-Hash-Tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
